--- a/app/src/main/res/layout/activity_adminpanel.xml
+++ b/app/src/main/res/layout/activity_adminpanel.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/download"
+    android:background="@drawable/bgintrod"
     tools:context=".adminpanel">
 
     <TextView
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:text="Welcome Admin"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,12 +23,12 @@
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="342dp"
+        android:layout_width="248dp"
         android:layout_height="44dp"
-        android:background="#DF362D"
+        android:background="#FFFFFF"
         android:gravity="center"
         android:text="Add item"
-        android:textColor="#FFFFFF"
+        android:textColor="#DF362D"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,18 +38,19 @@
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="343dp"
-        android:layout_height="42dp"
-        android:background="#DF362D"
+        android:layout_width="248dp"
+        android:layout_height="46dp"
+        android:background="#FFFFFF"
         android:gravity="center"
         android:text="Edit item"
-        android:textColor="#FFFFFF"
+        android:textColor="#DF362D"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.422" />
+        app:layout_constraintVertical_bias="0.461" />
 
     <TextView
         android:id="@+id/textView9"
@@ -62,24 +63,25 @@
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.526"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.602" />
+        app:layout_constraintVertical_bias="0.67" />
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="342dp"
-        android:layout_height="45dp"
-        android:background="#DF362D"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:background="#FFFFFF"
         android:gravity="center"
         android:text="Delete item"
-        android:textColor="#FFFFFF"
+        android:textColor="#DF362D"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.342" />
+        app:layout_constraintVertical_bias="0.362" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
