--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,273 +7,47 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <RelativeLayout
-            android:layout_marginTop="32dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_height="wrap_content"
+            android:id="@+id/rlBody"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginRight="20dp"
             android:paddingBottom="12dp">
 
             <TextView
+                android:id="@+id/welcome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="নমস্কার"
                 android:textColor="#FFFF"
                 android:textSize="28sp"
-                android:id="@+id/welcome"
-                android:textStyle="bold">
-            </TextView>
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="আপনার আইটেমগুলি বেছে নিন"
                 android:layout_below="@id/welcome"
+                android:text="আপনার আইটেমগুলি বেছে নিন"
                 android:textColor="#FFFF"
                 android:textSize="10dp"
-                android:textStyle="bold">
-            </TextView>
+                android:textStyle="bold" />
 
             <ImageView
+                android:id="@+id/cart"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="6dp"
-                android:id="@+id/cart"
                 android:src="@drawable/cart" />
-
         </RelativeLayout>
-
-        <GridLayout
+        <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="623dp"
-            android:layout_gravity="center"
-            android:columnCount="2"
-            android:columnOrderPreserved="false"
-            android:foregroundGravity="center"
-            android:rowCount="30">
-
-            <androidx.cardview.widget.CardView
-
-                android:layout_width="150dp"
-                android:layout_height="235dp"
-                android:layout_margin="12dp"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="6dp">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:gravity="left"
-                    android:orientation="vertical"
-                    android:padding="16dp">
-
-                    <ImageView
-                        android:layout_width="90dp"
-                        android:layout_height="70dp"
-                        android:layout_gravity="center"
-                        android:src="@drawable/potato"
-                        />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="12dp"
-                        android:gravity="center"
-                        android:id="@+id/name"
-                        android:text="আলু\n₹20/kg"
-                        android:textColor="#000000" />
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginLeft="2dp"
-                        android:layout_marginRight="2dp"
-                        android:layout_marginTop="4dp"
-                        android:layout_marginBottom="4dp"
-                        android:layout_gravity="center"
-                        >
-
-                        <Button
-                            android:layout_width="22dp"
-                            android:layout_height="22dp"
-                            android:layout_gravity="center"
-                            android:background="#FFC107"
-                            android:id="@+id/minus"
-                            android:foregroundGravity="center"
-                            android:gravity="center"
-                            android:layout_margin="2dp"
-                            android:text="-"
-                            android:textAlignment="center"
-                            android:textColor="#000000"
-                            android:textSize="10dp" />
-
-                        <TextView
-                            android:id="@+id/text1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="2dp"
-                            android:layout_marginRight="2dp"
-                            android:text="1.0"
-                            android:textColor="#000000" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="2dp"
-                            android:layout_marginRight="2dp"
-                            android:id="@+id/unit"
-                            android:text="kg"
-                            android:textColor="#000000" />
-
-                        <Button
-                            android:layout_width="22dp"
-                            android:layout_height="22dp"
-                            android:layout_gravity="center"
-                            android:background="#FFC107"
-                            android:id="@+id/plus"
-                            android:foregroundGravity="center"
-                            android:gravity="center"
-                            android:text="+"
-                            android:layout_marginLeft="2dp"
-                            android:layout_marginRight="2dp"
-                            android:textAlignment="center"
-                            android:textColor="#000000"
-                            android:textSize="10dp" />
-                    </LinearLayout>
-
-                    <Button
-                        android:layout_width="75dp"
-                        android:layout_height="35dp"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="8dp"
-                        android:background="#DF362D"
-                        android:text="Add to cart"
-                        android:id="@+id/atc"
-                        android:textColor="#FFFFFF"
-                        android:textSize="8sp" />
-
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-                    </GridLayout>
-                </LinearLayout>
-
-            </ScrollView>
-
-
-    <!--
-                <androidx.cardview.widget.CardView
-
-                    android:layout_width="150dp"
-                    android:layout_height="180dp"
-                    android:layout_margin="12dp"
-                    app:cardCornerRadius="12dp"
-
-                    app:cardElevation="6dp">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:foregroundGravity="center"
-                        android:gravity="left"
-                        android:orientation="vertical"
-                        android:padding="16dp">
-
-                        <ImageView
-                            android:layout_width="120dp"
-                            android:layout_height="100dp"
-                            android:src="@drawable/onion" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="1dp"
-                            android:gravity="center"
-                            android:text="পেঁয়াজ\n₹20/kg"
-                            android:textColor="#000000" />
-
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-
-                    android:layout_width="150dp"
-                    android:layout_height="180dp"
-                    android:layout_margin="12dp"
-                    app:cardCornerRadius="12dp"
-
-                    app:cardElevation="6dp">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:foregroundGravity="center"
-                        android:gravity="left"
-                        android:orientation="vertical"
-                        android:padding="16dp">
-
-                        <ImageView
-                            android:layout_width="120dp"
-                            android:layout_height="100dp"
-                            android:src="@drawable/brinjal" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="12dp"
-                            android:gravity="center"
-                            android:text="বেগুন\n₹20/kg"
-                            android:textColor="#000000" />
-
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-
-                    android:layout_width="150dp"
-                    android:layout_height="180dp"
-                    android:layout_margin="12dp"
-                    app:cardCornerRadius="12dp"
-
-                    app:cardElevation="6dp">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:foregroundGravity="center"
-                        android:gravity="left"
-                        android:orientation="vertical"
-                        android:padding="16dp">
-
-                        <ImageView
-                            android:layout_width="120dp"
-                            android:layout_height="100dp"
-                            android:src="@drawable/capsicum" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="12dp"
-                            android:gravity="center"
-                            android:text="ক্যাপসিকাম\n₹20/kg"
-                            android:textColor="#000000" />
-
-
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
--->
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+</RelativeLayout>
