--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -34,9 +34,9 @@
                 android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="12dp"
                 android:gravity="center"
-                android:layout_gravity="center"
                 android:text="আলু"
                 android:textColor="#000000" />
 
@@ -74,7 +74,7 @@
                 android:textSize="10dp" />
 
             <TextView
-                android:id="@+id/text1"
+                android:id="@+id/txtQuantity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -84,7 +84,7 @@
                 android:textColor="#000000" />
 
             <TextView
-                android:id="@+id/unit"
+                android:id="@+id/txtUnit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
