--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+<androidx.cardview.widget.CardView
     android:layout_width="150dp"
     android:layout_height="235dp"
+    android:layout_centerHorizontal="true"
     android:layout_margin="12dp"
     app:cardCornerRadius="12dp"
     app:cardElevation="6dp">
@@ -38,6 +41,8 @@
                 android:layout_marginTop="12dp"
                 android:gravity="center"
                 android:text="আলু"
+                android:lines="1"
+                android:ellipsize="end"
                 android:textColor="#000000" />
 
             <TextView
@@ -45,6 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:layout_gravity="center"
                 android:text="₹20/kg"
                 android:textColor="#000000" />
         </LinearLayout>
@@ -121,3 +127,4 @@
             android:textSize="8sp" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
+</RelativeLayout>
