--- a/app/src/main/res/layout/cart_list_item.xml
+++ b/app/src/main/res/layout/cart_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TableLayout
@@ -11,13 +12,15 @@
         <TableRow
             android:paddingTop="5dp"
             android:paddingBottom="5dp">
+
             <TextView
                 android:id="@+id/tblName"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="Potato"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+                android:textSize="13dp" />
 
             <TextView
                 android:id="@+id/tblPrice"
@@ -25,7 +28,8 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="10/kg"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+                android:textSize="13dp" />
 
             <TextView
                 android:id="@+id/tblQuantity"
@@ -33,7 +37,8 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="7kg"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+                android:textSize="13dp" />
 
             <TextView
                 android:id="@+id/tblTotal"
@@ -41,14 +46,19 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="10 x 7 = 70"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+                android:textSize="13dp" />
+
             <ImageView
                 android:id="@+id/tblRemoveBtn"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_baseline_remove_circle_24"
-                android:layout_marginEnd="3dp"/>
+                android:layout_marginEnd="3dp"
+
+                android:src="@drawable/deleteic"
+
+                />
         </TableRow>
     </TableLayout>
 </RelativeLayout>
