--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -62,12 +62,20 @@
                         android:textColor="#000000" />
 
                     <TextView
+                        android:id="@+id/slash"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:text="/"
+                        android:textColor="#000000" />
+                    <TextView
                         android:id="@+id/unit"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
-                        android:text="/kg"
+                        android:text="kg"
                         android:textColor="#000000" />
                 </LinearLayout>
             </LinearLayout>
