Edit and delete item added successfully

--- a/app/src/main/res/layout/activity_adminpanel.xml
+++ b/app/src/main/res/layout/activity_adminpanel.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bgintrod"
     android:orientation="vertical"
-    tools:context=".adminpanel">
+    tools:context=".activities.adminpanel">
 
     <TextView
         android:id="@+id/textView5"
