--- a/app/src/main/res/layout/activity_additem.xml
+++ b/app/src/main/res/layout/activity_additem.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bgintrod"
-    tools:context=".additem">
+    tools:context=".activities.additem">
 
     <TextView
         android:id="@+id/textView22"
