--- a/app/src/main/res/layout/activity_logadmin.xml
+++ b/app/src/main/res/layout/activity_logadmin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bgintrod"
-    tools:context=".logadmin">
+    tools:context=".activities.logadmin">
 
     <TextView
         android:id="@+id/textView2"
