--- a/app/src/main/res/layout/activity_reviewitems.xml
+++ b/app/src/main/res/layout/activity_reviewitems.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bgintrod"
-    tools:context=".reviewitems">
+    tools:context=".activities.reviewitems">
 
     <TextView
         android:id="@+id/tvItemReview"
