--- a/app/src/main/res/layout/activity_thankyou.xml
+++ b/app/src/main/res/layout/activity_thankyou.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bgintrod"
-    tools:context=".thankyou">
+    tools:context=".activities.thankyou">
 
     <TextView
         android:id="@+id/textView14"
