--- a/app/src/main/res/layout/activity_edititem.xml
+++ b/app/src/main/res/layout/activity_edititem.xml
@@ -14,12 +14,13 @@
         android:text="Image"
         android:textColor="#000000"
         android:textSize="20dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.183"
+        app:layout_constraintHorizontal_bias="0.177"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.45" />
+        app:layout_constraintVertical_bias="0.457" />
 
     <TextView
         android:id="@+id/textView20"
@@ -81,7 +82,7 @@
         android:id="@+id/etProductName"
         android:layout_width="177dp"
         android:layout_height="41dp"
-        android:background="#FFFEFE"
+        android:background="@drawable/custom_background"
         android:ems="10"
         android:inputType="textPersonName"
         android:textSize="18dp"
@@ -96,7 +97,7 @@
         android:id="@+id/etProductPrice"
         android:layout_width="177dp"
         android:layout_height="41dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/custom_background"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -115,10 +116,10 @@
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.729" />
+        app:layout_constraintVertical_bias="0.791" />
+
     <Spinner
         android:id="@+id/spinnerUnit"
         android:layout_width="118dp"
@@ -129,4 +130,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.378" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="177dp"
+        android:layout_height="141dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/image"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.786"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.545" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:backgroundTint="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.859"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.602"
+        app:maxImageSize="20dp"
+        app:srcCompat="@android:drawable/stat_sys_upload" />
 </androidx.constraintlayout.widget.ConstraintLayout>
