--- a/app/src/main/res/layout/activity_select_edit.xml
+++ b/app/src/main/res/layout/activity_select_edit.xml
@@ -66,12 +66,8 @@
         android:layout_alignParentBottom="true"
         android:background="#ffffff"
         android:src="@drawable/ic_baseline_add_24"
-        app:backgroundTint="@android:color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.864"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.924" />
+        app:backgroundTint="@android:color/black" 
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="50dp"/>
 
 </RelativeLayout>
