--- a/app/src/main/res/layout/view_order_item.xml
+++ b/app/src/main/res/layout/view_order_item.xml
@@ -140,10 +140,32 @@
                     android:layout_height="70dp"
                     android:background="?attr/selectableItemBackground"
                     android:clickable="true"
-                    android:scaleType="centerCrop"
                     android:focusable="true"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/ic_baseline_list_alt_24" />
             </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="30dp"
+                android:padding="10dp"
+                app:backgroundTint="#f5f5f5"
+                app:cardCornerRadius="8dp"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/txtStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingTop="1dp"
+                    android:paddingBottom="1dp"
+                    android:text="pending"
+                    android:textStyle="bold" />
+            </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:id="@+id/llManageBtn"
@@ -157,14 +179,24 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Cancel order" />
+                    app:backgroundTint="#c62828"
+                    android:textColor="#ffffff"
+                    android:layout_marginEnd="5dp"
+                    android:textStyle="bold"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+                    android:text="Cancel Order" />
 
                 <Button
                     android:id="@+id/btnMarkDeli"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:textStyle="bold"
+                    app:backgroundTint="#1b5e20"
+                    android:textColor="#ffffff"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                     android:layout_weight="1"
-                    android:text="Mark as delivered" />
+                    android:text="Mark as Delivered" />
             </LinearLayout>
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
