--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,10 @@
         <item name="colorPrimaryDark">#fc4b11</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="ViewOrderTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">#000000</item>
+        <item name="colorPrimaryDark">#fc4b11</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
 </resources>
