Some bug resolved

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
 
                 <TextView
                     android:id="@+id/txtNoti"
-                    android:layout_width="40dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginLeft="-10dp"
                     android:layout_toRightOf="@+id/cart"
